[package]
name = "srtm"
version = "0.1.1"
authors = ["Jochen Görtler <web@goertler.email>"]

description = "Reads elevation data from ``.hgt`` files in Rust."
repository = "https://github.com/grtlr/srtm.git"
readme = "README.md"

keywords = ["srtm", "hgt", "elevation-data", "srtm"]
categories = ["science"]
license = "BSD-3-Clause"

[lib]
name = "srtm"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
